Fix header padding on mobile

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -46,8 +46,7 @@ p {
 header {
     width: 100%;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 
 header a,
